# examen-creze

./: .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
backend/api/: status.py
backend/api/v1/: __init__.py
backend/api/v1/otp/: __init__.py  sync.py
backend/api/v1/token/: __init__.py  activate.py  refresh.py
backend/api/v1/transaction/: __init__.py  create.py
backend/api/v1/user/: __init__.py  log_out.py  login.py  sign_up.py
backend/functions/: register.py
backend/middleware/: error_handler.py
backend/models/: annotated.py  auth.py  common.py  response.py
backend/repository/: db.py  users.py
backend/repository/schemas/: login.py  user.py
backend/utils/: token.py
frontend/: .dockerignore  Dockerfile  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: styles.css
frontend/src/components/: dot_status.tsx  log_out_button.tsx  login_form.tsx  otp_form.tsx  protect_route.tsx  qr_code_button.tsx  register_form.tsx  token.tsx  token_info.tsx  transaction_button.tsx
frontend/src/layouts/: Layout.astro  main.astro
frontend/src/pages/: login.astro  otp.astro  protected.astro  sing-up.astro
frontend/src/utils/: store.ts  useAuth.ts
repository/: users.py
repository/schemas/: login.py
utils/: token.py
